X-RH-IDENTITY authentication outline (#11)
Now covered with many many tests
